# agidb

./: .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  install.sh  rust-toolchain.toml
.github/workflows/: ci.yml  eval-nightly.yml  release.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
crates/agidb/: Cargo.toml
crates/agidb-bench/: Cargo.toml
crates/agidb-bench/src/: main.rs
crates/agidb-cli/: Cargo.toml
crates/agidb-cli/src/: main.rs
crates/agidb-core/: Cargo.toml
crates/agidb-core/benches/: hdc_scan.rs
crates/agidb-core/src/: belief.rs  consolidate.rs  episode.rs  error.rs  goal.rs  hdc.rs  learning_log.rs  lib.rs  recall.rs  self_model.rs  signatures.rs  store.rs  types.rs  unlearn.rs
crates/agidb-core/tests/: belief_properties.rs  concept_lifecycle.rs  consolidate_properties.rs  episode_id_counter.rs  extraction_types.rs  goal_properties.rs  hdc_properties.rs  recall_properties.rs  storage_properties.rs  unlearn_properties.rs
crates/agidb-extract/: Cargo.toml
crates/agidb-extract/eval/: Cargo.toml
crates/agidb-extract/eval/gold/: observations.jsonl
crates/agidb-extract/eval/src/: main.rs
crates/agidb-extract/src/: aliases.rs  error.rs  extractor.rs  heuristic_relations.rs  lib.rs  model_manager.rs  models.rs  ner.rs  predicates.rs  temporal.rs
crates/agidb-extract/tests/: aliases_properties.rs  heuristic_relations.rs  model_manager.rs  ner_smoke.rs  observe_text.rs  predicates_properties.rs  temporal_properties.rs
crates/agidb-mcp/: Cargo.toml
crates/agidb-mcp/src/: context.rs  lib.rs  main.rs  protocol.rs  server.rs  tools.rs
crates/agidb-mcp/tests/: dispatch.rs
crates/agidb-py/: Cargo.toml
crates/agidb-py/src/: lib.rs
crates/agidb-server/: Cargo.toml
crates/agidb-server/src/: dispatch.rs  main.rs
crates/agidb/examples/: sarah_bawri.rs
crates/agidb/src/: lib.rs
crates/agidb/tests/: facade.rs
crates/sochdb/: Cargo.toml
crates/sochdb-bench/: Cargo.toml
crates/sochdb-bench/src/: main.rs
crates/sochdb-cli/: Cargo.toml
crates/sochdb-cli/src/: main.rs
crates/sochdb-core/: Cargo.toml
crates/sochdb-core/benches/: hdc_scan.rs
crates/sochdb-core/src/: consolidate.rs  episode.rs  error.rs  hdc.rs  lib.rs  recall.rs  signatures.rs  store.rs  types.rs
crates/sochdb-core/tests/: consolidate_properties.rs  hdc_properties.rs  recall_properties.rs  storage_properties.rs
crates/sochdb-extract/: Cargo.toml
crates/sochdb-extract/src/: lib.rs
crates/sochdb-mcp/: Cargo.toml
crates/sochdb-mcp/src/: main.rs
crates/sochdb-py/: Cargo.toml
crates/sochdb-py/src/: lib.rs
crates/sochdb/src/: lib.rs
docs/: PROJECT.md  README.md
docs/adr/: 0001-license-apache-2.md  0002-async-runtime-tokio.md  0003-agidb-v2-constitution.md  README.md
docs/agents/: domain.md  issue-tracker.md
docs/architecture/: architecture.md  bams-benchmark.md  brain-alignment.md  cognitive-primitives.md  layer-1-recall.md  layer-2-extraction.md  layer-3-storage.md  neurosymbolic.md
docs/phases/: README.md  phase-0-setup.md  phase-1-hdc-kernel.md  phase-10-sensory-self-model.md  phase-11-unlearn.md  phase-12-neurosymbolic.md  phase-13-cognitive-benchmarks.md  phase-14-multimodal-sensory.md  phase-15-brain-calibrated-surprise.md  phase-16-bams-benchmark.md  phase-2-storage.md  phase-3-extraction.md  phase-4-binding-recall.md  phase-5-mcp-python.md  phase-6-consolidation.md  phase-7-decision-gate.md  phase-8-hardening-launch.md  phase-9-cognitive-primitives.md
docs/product/: agi-trajectory.md  biological-mapping.md  overview.md  roadmap.md
docs/spec/: constitution.md  tech-spec.md
docs/superpowers/plans/: 2026-05-23-phase-3-extraction.md
docs/superpowers/specs/: 2026-05-23-phase-3-extraction-design.md
