[workspace]
resolver = "2"
members = [
    "crates/sochdb",
    "crates/sochdb-core",
    "crates/sochdb-extract",
    "crates/sochdb-cli",
    "crates/sochdb-mcp",
    "crates/sochdb-py",
    "crates/sochdb-bench",
]

[workspace.package]
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
repository = "https://github.com/sochdb/sochdb"
homepage = "https://sochdb.dev"
authors = ["sochdb contributors"]

[workspace.dependencies]
sochdb-core = { path = "crates/sochdb-core", version = "0.1.0-dev" }
sochdb-extract = { path = "crates/sochdb-extract", version = "0.1.0-dev" }

# core
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "debuginfo"

[profile.bench]
inherits = "release"
debug = true
