[workspace]
resolver = "2"
members = [
    "crates/agidb",
    "crates/agidb-core",
    "crates/agidb-extract",
    "crates/agidb-cli",
    "crates/agidb-mcp",
    "crates/agidb-py",
    "crates/agidb-bench",
]

[workspace.package]
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/agidb/agidb"
homepage = "https://agidb.dev"
authors = ["agidb contributors"]

[workspace.dependencies]
agidb-core = { path = "crates/agidb-core", version = "0.1.0-dev" }
agidb-extract = { path = "crates/agidb-extract", version = "0.1.0-dev" }

# core
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# storage (phase 2)
redb = "2"
memmap2 = "0.9"
roaring = "0.10"

# dev / test / bench
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
tempfile = "3"

# extraction (phase 3) — model-free deps added now; gline-rs / ort /
# tokenizers / ndarray land in plan task 9 when ner.rs actually uses them.
chrono-english = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
dirs = "6"
regex = "1"
indicatif = "0.17"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "debuginfo"

[profile.bench]
inherits = "release"
debug = true
