[package]
name = "agidb-bench"
description = "Benchmark harness for agidb. Runs LongMemEval-S, LoCoMo, and BEAM against agidb, Mem0, Zep/Graphiti, and Letta with the full six-metric stack."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "bench-all"
path = "src/main.rs"

[dependencies]
agidb-core = { workspace = true }
agidb-extract = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
