[package]
name = "agidb-cli"
description = "Command-line interface for agidb (open, observe, recall, consolidate, export, import, serve)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "agidb"
path = "src/main.rs"

[dependencies]
agidb = { path = "../agidb", version = "0.1.0-dev" }
agidb-core = { workspace = true }
agidb-mcp = { path = "../agidb-mcp", version = "0.1.0-dev" }
agidb-extract = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
