[package]
name = "agidb-core"
description = "The agidb engine: HDC kernel, redb metadata, mmap'd signatures, tiered recall."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
redb = { workspace = true }
memmap2 = { workspace = true }
roaring = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "hdc_scan"
harness = false
