[package]
name = "agidb-extract"
description = "GLiNER ONNX entity/relation extraction for agidb. The scaffolding layer (Layer 2)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
agidb-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
# extraction-specific (model-free; gline-rs / ort / tokenizers / ndarray
# arrive in plan task 9 when ner.rs actually needs them)
chrono-english = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
indicatif = { workspace = true }
# NER (plan task 9)
gline-rs = { workspace = true }
ort = { workspace = true }
tokenizers = { workspace = true }
orp = "0.9"

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
# Tests gated by this feature run real ONNX inference + may download
# model weights. Per-PR CI runs without it; nightly eval workflow turns
# it on.
model-tests = []
