[package]
name = "agidb-server"
description = "WebSocket HTTP bridge to the agidb MCP tool surface. Powers the interactive agidb.dev/demo page with real on-disk Agidb calls."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "agidb-server"
path = "src/main.rs"

[dependencies]
agidb-core = { workspace = true }
agidb-extract = { workspace = true }
agidb-mcp = { path = "../agidb-mcp", version = "0.1.0-dev" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
chrono = { workspace = true }