[package]
name = "sochdb-cli"
description = "Command-line interface for sochdb (open, observe, recall, consolidate, export, import)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "sochdb"
path = "src/main.rs"

[dependencies]
sochdb-core = { workspace = true }
sochdb-extract = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
