[package]
name = "sochdb-mcp"
description = "MCP server exposing sochdb as memory tools for Claude Desktop, Cursor, and other MCP-compatible agents."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "sochdb-mcp"
path = "src/main.rs"

[dependencies]
sochdb-core = { workspace = true }
sochdb-extract = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
