[package]
name = "sochdb-py"
description = "Python bindings for sochdb via pyo3. Builds the `sochdb` python wheel."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[lib]
path = "src/lib.rs"
# crate-type = ["cdylib"] is added in phase 5 when pyo3 lands

[dependencies]
sochdb-core = { workspace = true }
sochdb-extract = { workspace = true }
anyhow = { workspace = true }
