[package]
name = "sochdb"
description = "Embedded, content-addressable memory database for AI agents. Umbrella crate that re-exports sochdb-core and sochdb-extract."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["memory", "agent", "embedded", "hyperdimensional", "database"]
categories = ["database-implementations", "data-structures"]

[lib]
path = "src/lib.rs"

[dependencies]
sochdb-core = { workspace = true }
sochdb-extract = { workspace = true }
